# homerun3

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: coordinates.json  drag_models.json  environment.json  theme.json
data/ballparks/: registry.json
data/ballparks/chc-wrigley-field/: 2024.json
data/ballparks/lad-dodger-stadium/: 2024.json
data/ballparks/sea-t-mobile-park/: 2024.json
data/samples/: sample.csv
docs/: ballpark_schema.md  codex_request.md  coordinate_system.md  viewer_usage.md
mlbtraj/: __init__.py  ballpark.py  cli.py  events.py  output.py  paths.py  physics.py  simulate.py
tests/: test_cli.py  test_theme.py
viewer/: app.js  index.html  physics-lite.js  style.css
